# ML_HM_1

./: .gitignore  README.md  app.py  model.pkl  pyproject.toml
data/: sample.csv
